# QT_ITI

./: .gitignore
Task1_Gallery/: AboutScreen.qml  CMakeLists.txt  GalleryScreen.qml  HomeScreen.qml  Main.qml  README.md  SplashScreen.qml  main.cpp  resources.qrc
Task2_Calculator/: CMakeLists.txt  CalcScreen.qml  Main.qml  README.md  SplashScreen.qml  main.cpp
Task3_NetworkManager/: BluetoothListView.qml  CMakeLists.txt  HomeScreen.qml  Main.qml  SplashScreen.qml  StatusView.qml  WiFiListView.qml  main.cpp  res.qrc
Task3_NetworkManager/src/: bluetoothmanager.cpp  bluetoothmanager.h  wifimanager.cpp  wifimanager.h
Task4_RpiLED/: CMakeLists.txt  Compile&Build.md  Main.qml  README.md  main.cpp  rpi-toolchain.cmake
Task4_RpiLED/lib/: CMakeLists.txt  mygpio.cpp  mygpio.hpp
Task4_RpiLED/src/: gpiocontroller.cpp  gpiocontroller.h
Task5_WeatherApp/: CMakeLists.txt  Main.qml  README.md  main.cpp
